we have quads! we will have lights

--- a/RayTracing/RayTracing.vcxproj.filters
+++ b/RayTracing/RayTracing.vcxproj.filters
@@ -68,5 +68,8 @@
     <ClInclude Include="perlin.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="quad.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
