volumes! and the amazing final scene. cant have sweet dream before proper multithreading

--- a/RayTracing/RayTracing.vcxproj.filters
+++ b/RayTracing/RayTracing.vcxproj.filters
@@ -71,5 +71,8 @@
     <ClInclude Include="quad.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="constant_medium.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
