--- a/RayTracing/RayTracing.vcxproj.filters
+++ b/RayTracing/RayTracing.vcxproj.filters
@@ -74,5 +74,8 @@
     <ClInclude Include="constant_medium.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="vecTypes.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
